--- a/auth-server/.env
+++ b/auth-server/.env
@@ -1,2 +1,10 @@
-DATABASE_URL = postgresql://khalidnawazch73:eMFLlda2bwm6@ep-nameless-block-a1yegelj.ap-southeast-1.aws.neon.tech/auth-server?sslmode=require
-TEST_DATABASE_URL = postgresql://khalidnawazch73:eMFLlda2bwm6@ep-still-lake-a1h0nx7r.ap-southeast-1.aws.neon.tech/auth-server?sslmode=require
+# DATABASE_URL = postgresql://khalidnawazch73:eMFLlda2bwm6@ep-nameless-block-a1yegelj.ap-southeast-1.aws.neon.tech/auth-server?sslmode=require
+# TEST_DATABASE_URL = postgresql://khalidnawazch73:eMFLlda2bwm6@ep-still-lake-a1h0nx7r.ap-southeast-1.aws.neon.tech/auth-server?sslmode=require
+
+# .env
+
+# This is the connection string for the main container Database URL
+DATABASE_URL=postgresql://ziakhan:my_password@PostgresCont:5432/mydatabase
+
+# This is the connection string for the test branch of Neon Database URL
+TEST_DATABASE_URL=postgresql://ziakhan:my_password@PostgresCont:5432/mydatabase
